Comments to the Blockchain chapter

--- a/blockchain.tex
+++ b/blockchain.tex
@@ -3,6 +3,10 @@
 
 \minitoc \mtcskip \noindent
 
+\todo{fcorreia: estou a achar que não há uma justificação forte para ter este capitulo separado do seguinte. É certo que o seguinte tem uma parte de background e outra que que pode ser considerada quase revisão do SotA, mas não me choca tê-las como um único capitulo. o que te parece?}
+
+\todo{fcorreia: que tal chamar a este capitulo qq coisa como "Blockchain Technologies"?}
+
 This chapter introduces the most important concepts of blockchain which are essential for its applications. It interleaves the features of blockchain with its applicability to supply chain, by highlighting both the disadvantages and disadvantages, of blockchain in general and in particular to SCM, as well as any existing models for the integration of blockchain with SCM.
 
 \section{Introduction}
@@ -64,6 +68,9 @@ Therefore, the algorithms used by Bitcoin are not a defining feature of the bloc
     
      The most commonly used consensus algorithm is \textbf{Proof of Work (PoW)}, though there are others, like the most used alternatives, \textbf{Proof of Stake (PoS)}, and \textbf{Proof of Activity (PoA)}. We showcase some of the algorithms in table %TODO: PUT REFERENCE 2.1.
     
+
+\todo{fcorreia: diminuir ao tamanho de letra da tabela, e eventualmente dimensão máxima de certas colunas, para a fazer caber nas margens.}
+
 %%%%%%%%%%% TABLE
 
 %TODO: FIX THIS
@@ -109,6 +116,8 @@ Proof of Stake (PoS)                                                       & \be
 
     In general, blockchains are applied in different ways, from public ledgers to private, in a continuum, according to the specific needs. Many of them even apply the concept of smart contracts. Vitalik himself suggested some possible applications of Ethereum, and many more have been idealized, with some even being successfully applied. Here are some examples of areas where the benefits of introducing blockchain have been studied.
     
+\todo{fcorreia: era interessante incluir referências para cada uma destas áreas de aplicação que se seguem}
+
 %\todo{It could make sense to mention, for each of the aread below, the key properties of a blockchain that it expectedly benefits from.}
 % In the frameworks chapter, it is mentioned a bit better than here
 
