--- a/blockchainframeworks.tex
+++ b/blockchainframeworks.tex
@@ -186,6 +186,11 @@ In a simplified way, the workflow of the consensus, as shown in Figure \ref{fig:
 Compared to other blockchains, this consensus mechanism has some advantages, though its application is somewhat limited to some use cases. Table \ref{table:consensus_comparison} summarizes some points of difference between a blockchain using Proof of work and one, like Hyperledger, using a BFT state machine consensus.
 
 
+
+\todo{fcorreia: reduzir tamanho de letra da tabela seguinte}
+
+\todo{fcorreia: valerá a pena este colorido todo na tabela?}
+
 %%%%%%%%%%%%%%%% TABELA COMPARATIVA %%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Please add the following required packages to your document preamble:
