A couple more minor comments to the prototype and survey chapters

--- a/prototype.tex
+++ b/prototype.tex
@@ -311,3 +311,8 @@ Mention how the .cto file was designed, listing all the classes, participants, t
 	%(i.e. Relational DB limitations have to be offset by the use of EXTRA software that can grab the data and index it in a way that is easier to query and make more extensive queries)
 
 \section{Conclusions}
+
+
+\todo{fcorreia: algures neste capitulo e/ou no capitulo final de conclusões seria interessante relacionar o teu design com as alternativas que analisaste no cap 4 (cargox, eximchain, origintrail, etc.) }
+
+
