--- a/survey/surveyconclusion.tex
+++ b/survey/surveyconclusion.tex
@@ -15,3 +15,5 @@ Rank points of improvement?
 Rank features to be implemented?
 
 We concluded also...
+
+\todo{fcorreia: algures neste capitulo e/ou no capitulo final de conclusões seria interessante relacionar estas conclusões com as alternativas que analisaste no cap 4 (cargox, eximchain, origintrail, etc.) }
