prototype section 2, 3 and 4

--- a/prototype/prototype3.tex
+++ b/prototype/prototype3.tex
@@ -1,3 +1,8 @@
 \section{Design and Implementation}
 \subsection{Model Design - Composer Business Network}
-Mention how the .cto file was designed, listing all the classes, participants, transaction types and event types, and why it was decided they were necessary. Include class diagram
+\begin{itemize}
+\item Business Network Model - Mention how the .cto file was designed, listing all the classes, participants, transaction types and event types, and why it was decided they were necessary. Include class diagram, if needed, and coding decisions.
+\item Business Network Deployment - Explain how it works in the background through fabric, the nodes, the consensus and the option do define endorsement policy (which was the default as per this design, since no requirements were elicited that required otherwise); Include deployment (physical) diagram and explain the decisions made.
+\item Identity management - Creating identities, associating them to the participants, etc. (MAYBE THIS IS BETTER OFF IN THE BACKGROUND/STATE OF THE ART SECTION ABOUT COMPOSER)
+\item Tutorial/Show-off the functionalities of some kind? Include this on the 1st point?
+\end{itemize}
