--- a/prototype/prototype4.tex
+++ b/prototype/prototype4.tex
@@ -2,8 +2,18 @@
 
 \subsection{Requirements Validation}
 
+\begin{itemize}
+	\item Take the use cases from the requirements list and, for each, either say "Possible, not Implemented", "Possible, implemented" or "Not possible" and explain why it was not Possible
+	\item After all of these use cases, conclusions about how many were or were not possible, and what does that tell us about the functionalities that the survey concluded were essential: does the prototype feasibly implement them?
+\end{itemize}
+
 \subsection{Limitations}
 % List of limitations
 
 % List the disadvantages of this architecture (maybe next section)
 	%(i.e. Relational DB limitations have to be offset by the use of EXTRA software that can grab the data and index it in a way that is easier to query and make more extensive queries)
+
+\begin{itemize}
+	\item List of limitations for composer
+	\item List of limitations because of time?
+\end{itemize}
