Yet some more comments to the prototype chapter

--- a/prototype/prototype3.tex
+++ b/prototype/prototype3.tex
@@ -6,3 +6,7 @@
 \item Identity management - Creating identities, associating them to the participants, etc. (MAYBE THIS IS BETTER OFF IN THE BACKGROUND/STATE OF THE ART SECTION ABOUT COMPOSER)
 \item Tutorial/Show-off the functionalities of some kind? Include this on the 1st point?
 \end{itemize}
+
+\todo{fcorreia: incluir aqui o modelo de entidades de domínio?}
+
+\todo{fcorreia: nalgum lado (aqui?) fazer considerações sobre o contexto arquitetural em que esta blockchain poderia funcionar. Há outros sistemas que interligariam com a blockchain? quais? qual é a "fonte de verdade" da inforação, é a própria blockchain ou são outros sistemas (e a blockchain é só uma forma de integrar os vários sistemas com alguns atributos que pretendemos)?}
