--- a/prototype/prototype4.tex
+++ b/prototype/prototype4.tex
@@ -7,6 +7,8 @@
 	\item After all of these use cases, conclusions about how many were or were not possible, and what does that tell us about the functionalities that the survey concluded were essential: does the prototype feasibly implement them?
 \end{itemize}
 
+\todo{fcorreia: incluir requisitos funcionais e não funcionais}
+
 \subsection{Limitations}
 % List of limitations
 
