Survey group 4 - parts 1 and 2 completed, 3 discarded, 4 changed the images to show

--- a/survey/survey3.tex
+++ b/survey/survey3.tex
@@ -1,6 +1,7 @@
 %TODO: CHANGE TABLES CAPTIONS
 
 \subsection{Group 3 - Supply Chain Points of Focus and Problems}
+\label{sec-supplychainissues}
 %GRAFICO Inventory management
 This part of the survey focuses on finding out if the issues dug out on the background and pointed out in the Problem Statement chapter are really the ones that plague supply chain management. As such, a battery of questions including the various concerns mentioned was given to the respondents.
 
@@ -105,4 +106,4 @@ Looking at the graphics, the second question has a slightly higher agreement rat
   \item From the second set of questions, the only conclusion was that companies have in their interest to follow the quality standards, and traceability plays a big role in this.
 \end{itemize}
 
-The questions from this group have successfuly validated most, if not all,of the supply chain issues raised in the previous chapters. The remaining questions from the survey point towards points of improvement for these issues, as well as what possible features to implement in a system could help with these issues.
+The questions from this group have successfuly validated most, if not all, of the supply chain issues raised in the previous chapters. The remaining questions from the survey point towards points of improvement for these issues, as well as what possible features to implement in a system could help with these issues.
