survey group 4 almost finished

--- a/blockchainapplicability.tex
+++ b/blockchainapplicability.tex
@@ -10,7 +10,7 @@ The purpose of this chapter is, given all the information already presented, to 
 \todo{fcorreia: repetição de "presented" e "present"}
 
 \section{Advantages of Blockchain in Supply Chain}
-
+\label{sec:advantes-blockchain}
 Some of the advantages blockchain would bring to supply chain, over other solutions:
 
 \begin{itemize}
@@ -35,6 +35,7 @@ As described by Panayides \cite{Panayides2009}, co-operation and trust are the k
 In this sense, if the blockchain technology manages to improve the information flow in a supply chain, while maintaining security and trust between parties (at least at a technical level), then it follows that, just as concluded by Panayides and Yeung, the supply chain itself will have an improvement in performance, since the parties involved don't have to worry as much about these aspects or any power struggles. Therefore, \textbf{trust seems to be a key factor in building an efficient and effective supply chain}.
 
 \section{Challenges of Blockchain Application to Supply Chain}
+
 
 The reverse side of the coin is that Blockchain is not always the amazing solution that is prophesied. Blockchain itself is a topic in research and, while some of its applications and advantages are quite obvious, many of its disadvantages are overlooked, and these might be crucial when making the decision to apply blockchain to a supply chain.
 
