--- a/prototype/prototype1.tex
+++ b/prototype/prototype1.tex
@@ -35,7 +35,7 @@ NEXT:
 \subsection{Framework Choice}
 
 In this section:
-
+% internal supply chain trust was a main benefit of blockchain -> in favor of private blockchains
 \begin{enumerate}
 	\item Talk about the balance out the need for a good with performance with the need to satisfy the above requirements. 
 	\item The requirements are roughly: private blockchain with good security development; contract enforcement; financial transactions;
