--- a/survey/survey4.tex
+++ b/survey/survey4.tex
@@ -150,7 +150,7 @@ The importance ranking described as before follows below:
  
 %CHANGE IMAGES TO THE 2 GRAPHICS ABOUT USE CASES OF BC+SC AND BENEFITS OF BC+SC
 
-(Placeholder image. Should i divide it in more images?)
+The final important group of questions featured 2 questions about the viability of applying blockchain to the supply chain. The first question asked people which use cases they thought were the best for applying blockchain to the supply chain and respondents could select a maximum of 3 options (including "None" or "Do not know").
 
 \begin{figure}[ht]
     %\makebox[2pt]{}
@@ -162,5 +162,35 @@ The importance ranking described as before follows below:
     \label{fig:group4_graphics}
 \end{figure}
 
+Starting with the analysis of the first question:
+\begin{itemize}
+    \item \textbf{Financial transactions was, by far, the most popular choice.} The respondents look at blockchain as a way to move money as an asset, more than a tool to manage the goods themselves, since traditional systems only deal with data and the money is dealt with by third parties (banks). It makes sense that \textbf{the second most voted choice is Contract Enforcement.} As per the background research and state of the art, it was pointed out that some of the applications already enforce payments through contracts, when the goods are delivered,for instance, without the need of a third party (thus reducing fees). Financial transactions and contract management go hand in hand. 
+     
+    \item With the same number of votes, \textbf{also in second place, is regulatory compliance and auditing}. Regulatory compliance is also related to contracts enforcement. Contracts are used to establish mandatory rules which are automatically enforced according to the conditions of the system (for instance, enforce that the food transported in a truck never goes over a certain temperature value). \textbf{However, an important point to note is that regulatory compliance and auditing are made possible through the traceability characteristic of blockchain, which allows for products and processes to be thouroughly verified. This means that traceability is a highly sought after application of blockchain.}
+    \item Secure data storage was also highly voted. Security is an important focus in information systems, so this should be taken into account when building the proof-of-concept. In the previous set of questions, access control and security according to the latest requirements were also features that stood out, so \textbf{it is not a surprise that secure data storage is seen as one of the main advantages of blockchain, since it boasts its cryptographic security, immutability by design and easy to implement access control.}. 
+    %TODO check grammar of last sentence
+\end{itemize}
+
+The proof-of-concept has to not only take these use cases into account as the main applications, but also implement (or make possible the implementation of) the most important features of information systems previously analyzed.
+
+Finally, an analysis of the benefits that blockchain can bring to the supply chain, according to the respondents:
+
+\begin{itemize}
+    \item The three most voted items were: \textit{"Better transaction integrity and visibility"}, \textit{"Reduction of risks (fraud/tampering/information leaks)"} and \textit{"Stronger working relationships with partners"}.
+
+    The first two items were expected to rank high. They directly relate to the security and traceability points of improvement already discussed - traceability makes it possible to view the records to make sure nothing suspicious is going on, and the security and immutability of the information makes it impossible to tamper with the data.
+    
+    The third point, "Stronger working relationships with partners", however,is interesting to see being chosen a high ranked benefit. The concept of strong relationships with partners is linked to  the concept of \textbf{internal supply chain trust}, which was already introduced in \ref{sec:advantes-blockchain}. The ability for partners to trust each other is what makes the supply chain possible and efficient to the standards of today. It seems that the professionals really do think of blockchain as a tool to improve this internal trust.
+    
+    The selection of these 3 items as the most voted does not seem to be a coincidence. \textbf{Blockchain can be used as a source of truth for the supply chain and this leads to the side benefits of internal trust, better relationships with the partners, less fraud, less tampering, less leaks, among other benefits, all made possible because of the main characteristics: security and traceability.}
+\end{itemize}
 
 \subsection*{Conclusions from Group 4}
+
+%The respondents focused mostly on the following issues:
+
+%Then they focused on these points of improvement:
+
+%Finally, the
+
+%Conclude that the prototype must focus on: security and traceability, as these are the items that the respondent's focused the most on
